--- a/vercel.json
+++ b/vercel.json
@@ -3,18 +3,10 @@
   "builds": [
     { 
       "src": "api/main.py", 
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "50mb"
-      }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
     { "src": "/(.*)", "dest": "api/main.py" }
-  ],
-  "functions": {
-    "api/main.py": {
-      "maxDuration": 300
-    }
-  }
+  ]
 }
